--- a/assets/css/bdstudio_button.css
+++ b/assets/css/bdstudio_button.css
@@ -5,9 +5,9 @@
 @font-face { 
   font-display:block;
   font-family:bootstrap-icons;
-  src:url(./fonts/bootstrap-icons-cfe45b98.woff2-1fa40e8900654d2863d011707b9fb6f2) format("woff2"),url(./fonts/bootstrap-icons-999550fa.woff-1fa40e8900654d2863d011707b9fb6f2) format("woff");
+  src:url(/assets/fonts/bootstrap-icons-cfe45b98.woff2-1fa40e8900654d2863d011707b9fb6f2) format("woff2"),url(/assets/fonts/bootstrap-icons-999550fa.woff-1fa40e8900654d2863d011707b9fb6f2) format("woff");
 } 
-body { 
+.lil-gui { 
 /* CSS Variables that may have been missed get put on body */ 
     --background-color:  #1f1f1f;  
     --text-color:  #ebebeb;  
@@ -80,34 +80,7 @@ body {
     scrollbar-color: #ffffff80 #00000000;
 } 
 
-#GUI > :nth-child(1)  { 
-    flex-grow: 3; 
-    min-height: 600px;
-} 
 
-#GUI { 
-    display: flex; 
-    position: absolute; 
-    flex-direction: row; 
-    width: 100%; 
-    height: 100%;
-} 
-
-#editor { 
-    position: relative; 
-    width: 100%; 
-    height: 100%; 
-    overflow: hidden;
-} 
-
-body { 
-    height:  100%;
-    margin: 0;
-} 
-
-html { 
-    height: 100%;
-} 
 
 :root { 
     --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif; 
@@ -120,20 +93,6 @@ html {
     display: flex; 
     flex-direction: row; 
     flex-wrap: wrap;
-} 
-
-#editor ::-webkit-scrollbar { 
-    width: 4px;
-} 
-
-#editor ::-webkit-scrollbar-thumb { 
-    background-color: #ffffff80; 
-    border-radius: 10px; 
-    border: 3px solid #00000000;
-} 
-
-#editor ::-webkit-scrollbar-track { 
-    background: #00000000;
 } 
 
 .lil-gui { 
