--- a/assets/css/bdstudio_button.css
+++ b/assets/css/bdstudio_button.css
@@ -92,13 +92,12 @@
 }
 
 #top_tool_strip {
-    position: absolute;
-    right: 16px;
-    top: 16px;
+    position: relative;
     z-index: 10;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    
 }
 
 .lil-gui {
